--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "bootstrap": "^4.1.1",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.3",
     "rxjs": "^6.2.1",
     "zone.js": "^0.8.26"
   },
