--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "@angular/platform-browser": "6.0.5",
     "@angular/platform-browser-dynamic": "6.0.5",
     "@angular/router": "6.0.5",
+    "@types/lodash": "^4.14.110",
     "bootstrap": "^4.1.1",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.10",
+    "ngx-page-scroll": "^5.0.0",
     "popper.js": "^1.14.3",
     "rxjs": "^6.2.1",
     "zone.js": "^0.8.26"
